syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mat.jamr.userservice.api";
option java_outer_classname = "UserGrpcService";

import "buf/validate/validate.proto";

service UserService {
  rpc SaveUser (SaveUserRequest) returns (SaveUserResponse) {}
  rpc RetrieveUser (RetrieveUserRequest) returns (RetrieveUserResponse) {}
}

message RetrieveUserRequest {
  string id = 1;
}

message RetrieveUserResponse {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
}

message SaveUserRequest {
  string name = 1;
  string surname = 2;
  string email = 3 [(buf.validate.field).string.min_len = 3];
}

message SaveUserResponse {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
}